--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
     "firebase": "^7.8.0",
     "path": "^0.12.7",
